# claket-tauri

./: AGENTS.md  CHANGELOG.md  GEMINI.md  README.md  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: release.yml
.planning/: PROJECT.md  STATE.md
.planning/quick/260324-row-replace-existing-aurora-background-compo/: 260324-row-PLAN.md  260324-row-SUMMARY.md
.planning/quick/260324-sqb-remove-blur-selection-in-settings-keep-o/: 260324-sqb-PLAN.md  260324-sqb-SUMMARY.md
src/: App.vue  main.ts  style.css  vue-glow.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  lib.rs  main.rs
src/components/: DeviceSelector.vue  GlowButton.vue  TitleBar.vue
src/components/ui/: AuroraBackground.vue  GlowingEffect.vue  Input.vue
src/components/ui/aurora-background/: AuroraBackground.vue
src/components/ui/sonner/: Sonner.vue
src/components/ui/switch/: Switch.vue
src/composables/: useKeyboardShortcuts.ts
src/lib/: utils.ts
src/stores/: audio.ts
