[package]
name = "claket"
version = "0.2.0"
description = "A modern, high-performance native soundboard for streamers and power users."
authors = ["sk4ur"]
edition = "2021"
repository = "https://github.com/aera128/claket-tauri"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "claket_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10", features = [] }
tauri-plugin-opener = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = { version = "0.19", features = ["symphonia-all"] }
cpal = "0.15"
symphonia = { version = "0.5", features = ["all", "opt-simd"] }
symphonia-bundle-flac = "0.5"
symphonia-bundle-mp3 = "0.5"
symphonia-codec-aac = "0.5"
symphonia-codec-alac = "0.5"
symphonia-codec-vorbis = "0.5"
symphonia-format-ogg = "0.5"
symphonia-format-mkv = "0.5"
symphonia-format-isomp4 = "0.5"
tauri-plugin-store = "2.4"
tauri-plugin-dialog = "2.6"
opus = "0.3.1"
ogg = "0.9.2"
tauri-plugin-global-shortcut = "2.3"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "z" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

